prevent friend list bounce, still need to handle scrollbar

--- a/components/tailored/core/sidebar/Sidebar.less
+++ b/components/tailored/core/sidebar/Sidebar.less
@@ -57,9 +57,11 @@
 
   .scrolling {
     flex: 1;
-    .ps {
-      padding: 0 @normal-spacing;
-    }
+    padding: 0 @normal-spacing;
+    // .ps {
+    //   // padding: 0px 0.25px 0px 0px;
+    //   background-color: rgb(37, 42, 48);
+    // }
   }
   .loading-container {
     display: inline-flex;
